[package]
name = "cached-path"
version = "0.4.1"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["http", "caching"]
categories = ["caching"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/rust-cached-path"
homepage = "https://github.com/epwalsh/rust-cached-path"
description = "Download and cache HTTP resources."

[lib]
name = "cached_path"
path = "src/lib.rs" 

[[bin]]
name = "cached-path"
path = "src/main.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
file-lock = "1.1"
reqwest = { version = "0.10.0", features = ["blocking"] }
sha2 = "0.9"
tempfile = "3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
glob = "0.3"
thiserror = "1.0"
env_logger = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
build-binary = ["anyhow", "env_logger", "structopt"]

[dev-dependencies]
httpmock = "0.3"
