[package]
name = "cached-path"
version = "0.5.1"
authors = ["epwalsh <epwalsh10@gmail.com>"]
edition = "2018"
keywords = ["http", "caching"]
categories = ["caching"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/epwalsh/rust-cached-path"
homepage = "https://github.com/epwalsh/rust-cached-path"
description = "Download and cache HTTP resources."

[lib]
name = "cached_path"
path = "src/lib.rs" 

[[bin]]
name = "cached-path"
path = "src/main.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
fs2 = "0.4"
reqwest = { version = "0.11.0", features = ["blocking"] }
sha2 = "0.9"
tempfile = "3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
glob = "0.3"
thiserror = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = "0.5"
zip-extensions = "0.6"
indicatif = "0.16"
env_logger = { version = "0.9", optional = true }
structopt = { version = "0.3", optional = true }
color-eyre = { version = "0.6", optional = true }

[features]
build-binary = ["env_logger", "structopt", "color-eyre"]

[dev-dependencies]
httpmock = "0.5"
assert_cmd = "1.0"
predicates = "1.0"
